--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
 	},
 	"dependencies": {
 		"babel-eslint": "4.1.6",
-    "eslint": "1.10.3",
-    "eslint-config-airbnb": "2.1.1",
-    "eslint-plugin-react": "3.12.0",
-    "react": "16.0.0-alpha.6",
+		"eslint": "1.10.3",
+		"eslint-config-airbnb": "2.1.1",
+		"eslint-plugin-react": "3.12.0",
 		"react": "16.0.0-alpha.12",
-		"react-native": "0.47.1"
+		"react-native": "0.47.1",
+		"react-native-navigation": "^1.1.188"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
